<b>Version 2.2.3:</b><br/><br/>
    &#8226; Small reported bug fixes<br/>
    &#8226; Some crash fixes<br/>
</br><br/>

<b>Version 2.2.3:</b><br/><br/>
    &#8226; Small bug fixes<br/>
</br><br/>

<b>Version 2.2.2:</b><br/><br/>
    &#8226; Image rotation fixes when tweeting<br/>
    &#8226; Rotate the screen in the photo viewer<br/>
    &#8226; Small vibrate on tweet sent<br/>
    &#8226; Notification fixes<br/>
    &#8226; Updated translations<br/>
</br><br/>

<b>Version 2.2.1:</b><br/><br/>
    &#8226; Better notification when replying to tweet<br/>
    &#8226; Only pre-cache over wifi option<br/>
    &#8226; Bug fixes<br/>
    &#8226; Crash fixes<br/>
    &#8226; Translation updates<br/>
</br><br/>

<b>Version 2.2.0:</b><br/><br/>
    &#8226; [New] Full screen layout option<br/>
    &#8226; [New] Pre-cache images option<br/>
    &#8226; [New] Draft system for multiple drafts<br/>
    &#8226; [New] Plain text browser option<br/>
    &#8226; [New] Tweet multiple images<br/>
    &#8226; [New] Pictures in DM's with TwitPic<br/>
    &#8226; [New] Live streaming mentions<br/>
    &#8226; [New] Force overflow in some places<br/><br/>
    &#8226; [Improved] Notification while tweeting<br/>
    &#8226; [Improved] Options for in app browser<br/>
    &#8226; [Improved] Refresh tweets count on timeline<br/>
    &#8226; [Improved] Cache and image loading<br/>
    &#8226; [Improved] Style changes for UI<br/>
    &#8226; [Improved] Updated Twitter4j<br/><br/>
    &#8226; [Fix] Some problems with uploading photos<br/>
    &#8226; [Fix] Toast bar sticking<br/>
    &#8226; [Fix] Max tweets to download<br/>
</br><br/>

<b>Version 2.1.6:</b><br/><br/>
    &#8226; More duplication fixes<br/>
    &#8226; Crash fixes<br/>
    &#8226; Translation updates<br/>
</br><br/>

<b>Version 2.1.5:</b><br/><br/>
    &#8226; Fixed black loading screen and duplicates occurring from it<br/>
    &#8226; Toast bar shouldn't get stuck anymore<br/>
    &#8226; Internal browser updates<br/>